# model-arena

./: .env.example  .gitignore  AGENTS.md  ARTICLE.md  CLAUDE.md  PLANS.md  README.md  SPECS.md  candidate_responses.json  docker-compose.yml  judge_responses.json  score_responses.json
.claude/: settings.json
backend/: eslint.config.mjs  package-lock.json  package.json
backend/src/: app.module.ts  main.ts
backend/src/catalog/: catalog.module.ts
backend/src/database/: database.module.ts
backend/src/event/: event.module.ts
backend/src/experiment/: experiment.module.ts
backend/src/rabbitmq/: rabbitmq.module.ts
candidate-agent/: pyproject.toml
candidate-agent/app/: container.py  main.py
candidate-agent/app/agent/: candidate_graph.py  candidate_state.py  errors.py  model_factory.py  templates.py
candidate-agent/app/agent/nodes/: advance_round_node.py  candidate_node.py  publish_node.py
candidate-agent/app/configs/: event_configs.py  settings.py
candidate-agent/app/contracts/: experiment_interface.py
candidate-agent/app/events/: rabbitmq_consumer.py
candidate-agent/app/events/handlers/: experiment_event_handler.py
candidate-agent/app/services/: experiment_manager.py  redis_client.py
frontend/: next.config.ts  package-lock.json  package.json
frontend/src/app/: layout.tsx  page.tsx
judge-agent/: pyproject.toml
judge-agent/app/: container.py  main.py
recover-service/: package-lock.json  package.json  scratch-seed-stalls.js
recover-service/src/: app.module.ts  main.ts
score-agent/: pyproject.toml
score-agent/app/: container.py  main.py
(+93 files in other folders)
